Hide whatever scrollbars we can (specifically OSX Lion+ webkit); fixes #13

--- a/src/mixins/scrollbar.scss
+++ b/src/mixins/scrollbar.scss
@@ -2,3 +2,13 @@
   -webkit-touch-callout: none;
   user-select: none;
 }
+
+.ScrollbarContent::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
+.ScrollbarContent::scrollbar {
+  width: 0;
+  height: 0;
+}
